--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "murrahs",
+  "name": "cs340-project",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Samuel Murrah",
+  "author": "Cadence Jenkins",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
